force-app/main/default/objects/User__c/fields/Aadhar_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Card_Number__c</fullName>
    <inlineHelpText>Enter a valid Aadhar Card Number</inlineHelpText>
    <label>Aadhar Card Number</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>