force-app/main/default/objects/User__c/fields/ActiveUser__c.field-meta.xml
<CustomField>
    <fullName>ActiveUser__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ActiveUser</label>
    <type>Checkbox</type>
</CustomField>