force-app/main/default/objects/User__c/fields/Address_is_the_same_as_mentioned_above__c.field-meta.xml
<CustomField>
    <fullName>Address_is_the_same_as_mentioned_above__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address is the same as mentioned above.</label>
    <type>Checkbox</type>
</CustomField>