force-app/main/default/objects/User__c/fields/Any_Other__c.field-meta.xml
<CustomField>
    <fullName>Any_Other__c</fullName>
    <label>Any Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>