force-app/main/default/objects/User__c/fields/Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details__c</fullName>
    <label>Bank Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>