force-app/main/default/objects/User__c/fields/Bereavement_Leave__c.field-meta.xml
<CustomField>
    <fullName>Bereavement_Leave__c</fullName>
    <label>Bereavement Leave</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>