force-app/main/default/objects/User__c/fields/Campus_Name__c.field-meta.xml
<CustomField>
    <fullName>Campus_Name__c</fullName>
    <label>Campus Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>