force-app/main/default/objects/User__c/fields/Casual_Leave__c.field-meta.xml
<CustomField>
    <fullName>Casual_Leave__c</fullName>
    <label>Casual Leave</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>