force-app/main/default/objects/User__c/fields/Children_Name_Age_DOB__c.field-meta.xml
<CustomField>
    <fullName>Children_Name_Age_DOB__c</fullName>
    <label>Children Name/Age/DOB</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>