force-app/main/default/objects/User__c/fields/Consultancy_Name__c.field-meta.xml
<CustomField>
    <fullName>Consultancy_Name__c</fullName>
    <label>Consultancy Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>