force-app/main/default/objects/User__c/fields/Covaccine__c.field-meta.xml
<CustomField>
    <fullName>Covaccine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covaccine</label>
    <type>Checkbox</type>
</CustomField>