force-app/main/default/objects/User__c/fields/Covidshield__c.field-meta.xml
<CustomField>
    <fullName>Covidshield__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covidshield</label>
    <type>Checkbox</type>
</CustomField>