force-app/main/default/objects/User__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <inlineHelpText>Enter a Proper Date Of Birth</inlineHelpText>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>