force-app/main/default/objects/User__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>Associate consultant</fullName>
            </value>
            <value>
                <fullName>Software Testing Engineer</fullName>
            </value>
            <value>
                <fullName>Senior Consultant</fullName>
            </value>
            <value>
                <fullName>Trainee Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant - Oracle</fullName>
            </value>
            <value>
                <fullName>Trainee - Oracle</fullName>
            </value>
            <value>
                <fullName>Trainee - RPA</fullName>
            </value>
            <value>
                <fullName>Delivery Head</fullName>
            </value>
            <value>
                <fullName>Tech Lead</fullName>
            </value>
            <value>
                <fullName>Office Assistant</fullName>
            </value>
            <value>
                <fullName>Operations Manager</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
            <value>
                <fullName>Software Test Engineer</fullName>
            </value>
            <value>
                <fullName>Sr. Manager Finance</fullName>
            </value>
            <value>
                <fullName>Sr. Finance Executive</fullName>
            </value>
            <value>
                <fullName>Trainee - SFDC</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Sr. Oracle Functional Consultant</fullName>
            </value>
            <value>
                <fullName>HR Executive</fullName>
            </value>
            <value>
                <fullName>Software Engineer</fullName>
            </value>
            <value>
                <fullName>Software consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>