force-app/main/default/objects/User__c/fields/Driver_s_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_License_Number__c</fullName>
    <label>Driving License Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>