force-app/main/default/objects/User__c/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <inlineHelpText>This number should not similar to personal contact number</inlineHelpText>
    <label>Emergency Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>