force-app/main/default/objects/User__c/fields/Experience_Status__c.field-meta.xml
<CustomField>
    <fullName>Experience_Status__c</fullName>
    <label>Experience Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresher</fullName>
            </value>
            <value>
                <fullName>Experienced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>