force-app/main/default/objects/User__c/fields/Father_s_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Contact_No__c</fullName>
    <label>Father&apos;s Contact No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>