force-app/main/default/objects/User__c/fields/Father_s_D_O_B__c.field-meta.xml
<CustomField>
    <fullName>Father_s_D_O_B__c</fullName>
    <label>Father&apos;s D.O.B</label>
    <type>Date</type>
</CustomField>