force-app/main/default/objects/User__c/fields/HSC_Board__c.field-meta.xml
<CustomField>
    <fullName>HSC_Board__c</fullName>
    <label>HSC Board</label>
    <length>200</length>
    <type>Text</type>
</CustomField>