force-app/main/default/objects/User__c/fields/HSC_Year_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>HSC_Year_of_Completion__c</fullName>
    <label>Year of Completion</label>
    <type>Date</type>
</CustomField>