force-app/main/default/objects/User__c/fields/If_its_a_different_Address__c.field-meta.xml
<CustomField>
    <fullName>If_its_a_different_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If its a different Address</label>
    <type>Checkbox</type>
</CustomField>