force-app/main/default/objects/User__c/fields/IFSC_Number__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Number__c</fullName>
    <label>IFSC Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>