force-app/main/default/objects/User__c/fields/Loss_Of_Pay__c.field-meta.xml
<CustomField>
    <fullName>Loss_Of_Pay__c</fullName>
    <label>Loss Of Pay</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>