force-app/main/default/objects/User__c/fields/MICR_Number__c.field-meta.xml
<CustomField>
    <fullName>MICR_Number__c</fullName>
    <label>MICR Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>