force-app/main/default/objects/User__c/fields/Military_Service__c.field-meta.xml
<CustomField>
    <fullName>Military_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Military Service</label>
    <type>Checkbox</type>
</CustomField>