force-app/main/default/objects/User__c/fields/Mode_Of_Advertising__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Advertising__c</fullName>
    <label>Mode Of Advertising</label>
    <length>50</length>
    <type>Text</type>
</CustomField>