force-app/main/default/objects/User__c/fields/Mother_s_Age__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Age__c</fullName>
    <label>Mother&apos;s Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>