force-app/main/default/objects/User__c/fields/Mother_s_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Contact_No__c</fullName>
    <label>Mother&apos;s Contact No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>