force-app/main/default/objects/User__c/fields/Mother_s_D_O_B__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_D_O_B__c</fullName>
    <label>Mother&apos;s D.O.B</label>
    <type>Date</type>
</CustomField>