force-app/main/default/objects/User__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>TEXT (Salutation__c)  &amp; &quot; &quot; &amp;    First_Name__c  &amp; &quot; &quot; &amp;   Middle_Name__c  &amp; &quot; &quot; &amp; Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of the user</label>
    <type>Text</type>
</CustomField>