force-app/main/default/objects/User__c/fields/Name_As_Per_Bank__c.field-meta.xml
<CustomField>
    <fullName>Name_As_Per_Bank__c</fullName>
    <label>Name As Per Bank</label>
    <length>100</length>
    <type>Text</type>
</CustomField>