force-app/main/default/objects/User__c/fields/Name_of_the_Organization__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Organization__c</fullName>
    <label>Name of the Organization</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>