force-app/main/default/objects/User__c/fields/Other_Experiences__c.field-meta.xml
<CustomField>
    <fullName>Other_Experiences__c</fullName>
    <inlineHelpText>If it&apos;s more than one work experience, please Enter your company name/Designation/Time period.</inlineHelpText>
    <label>Other Experiences</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>