force-app/main/default/objects/User__c/fields/Other_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Source__c</fullName>
    <label>Other Source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>