force-app/main/default/objects/User__c/fields/P_Mobile__c.field-meta.xml
<CustomField>
    <fullName>P_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>