force-app/main/default/objects/User__c/fields/P_PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>P_PAN_Number__c</fullName>
    <inlineHelpText>Enter a valid Pancard Number</inlineHelpText>
    <label>PAN Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>