force-app/main/default/objects/User__c/fields/P_UAN_Number__c.field-meta.xml
<CustomField>
    <fullName>P_UAN_Number__c</fullName>
    <label>UAN Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>