force-app/main/default/objects/User__c/fields/Passport_City__c.field-meta.xml
<CustomField>
    <fullName>Passport_City__c</fullName>
    <label>Passport City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>