force-app/main/default/objects/User__c/fields/Passport_Issue_place__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issue_place__c</fullName>
    <label>Issue Place</label>
    <length>50</length>
    <type>Text</type>
</CustomField>