force-app/main/default/objects/User__c/fields/Passport_State__c.field-meta.xml
<CustomField>
    <fullName>Passport_State__c</fullName>
    <label>Passport State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>