force-app/main/default/objects/User__c/fields/Passport_Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>Passport_Valid_Till__c</fullName>
    <label>Passport Valid Till</label>
    <type>Date</type>
</CustomField>