force-app/main/default/objects/User__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <inlineHelpText>&quot;It must contain at least one uppercase letter, one lowercase letter, and one number, with a minimum length of 8 characters.&quot;</inlineHelpText>
    <label>Password</label>
    <length>12</length>
    <type>Text</type>
</CustomField>