force-app/main/default/objects/User__c/fields/PG_College_Name__c.field-meta.xml
<CustomField>
    <fullName>PG_College_Name__c</fullName>
    <label>PG College/University Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>