force-app/main/default/objects/User__c/fields/PG_Degree__c.field-meta.xml
<CustomField>
    <fullName>PG_Degree__c</fullName>
    <label>PG Degree</label>
    <length>50</length>
    <type>Text</type>
</CustomField>