force-app/main/default/objects/User__c/fields/PG_Percentage__c.field-meta.xml
<CustomField>
    <fullName>PG_Percentage__c</fullName>
    <label>PG Percentage</label>
    <length>8</length>
    <type>Text</type>
</CustomField>