force-app/main/default/objects/User__c/fields/PG_year_completion__c.field-meta.xml
<CustomField>
    <fullName>PG_year_completion__c</fullName>
    <label>PG year completion</label>
    <type>Date</type>
</CustomField>