force-app/main/default/objects/User__c/fields/Physically_Challenged__c.field-meta.xml
<CustomField>
    <fullName>Physically_Challenged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physically Challenged</label>
    <type>Checkbox</type>
</CustomField>