force-app/main/default/objects/User__c/fields/Previous_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Passport_Number__c</fullName>
    <label>Previous Passport Number/Valid Till</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>