force-app/main/default/objects/User__c/fields/Reporting_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_To_Name__c</fullName>
    <label>Reporting To Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>