force-app/main/default/objects/User__c/fields/SIN_Number__c.field-meta.xml
<CustomField>
    <fullName>SIN_Number__c</fullName>
    <label>SIN Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>