force-app/main/default/objects/User__c/fields/Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>Skill_Set__c</fullName>
    <label>Skill Set</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>