force-app/main/default/objects/User__c/fields/Spouse_s_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Spouse_s_Contact_No__c</fullName>
    <label>Spouse&apos;s Contact No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>