force-app/main/default/objects/User__c/fields/SSLC_Board__c.field-meta.xml
<CustomField>
    <fullName>SSLC_Board__c</fullName>
    <label>SSLC Board</label>
    <length>200</length>
    <type>Text</type>
</CustomField>