force-app/main/default/objects/User__c/fields/SSN_Number__c.field-meta.xml
<CustomField>
    <fullName>SSN_Number__c</fullName>
    <label>SSN Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>