force-app/main/default/objects/User__c/fields/UG_Degree__c.field-meta.xml
<CustomField>
    <fullName>UG_Degree__c</fullName>
    <label>UG Degree</label>
    <length>50</length>
    <type>Text</type>
</CustomField>