force-app/main/default/objects/User__c/fields/UG_year_completion__c.field-meta.xml
<CustomField>
    <fullName>UG_year_completion__c</fullName>
    <label>UG year completion</label>
    <type>Date</type>
</CustomField>