force-app/main/default/objects/User__c/fields/UGCollege_UniversityName__c.field-meta.xml
<CustomField>
    <fullName>UGCollege_UniversityName__c</fullName>
    <label>UG College/University Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>