force-app/main/default/objects/User__c/fields/UGPercentage__c.field-meta.xml
<CustomField>
    <fullName>UGPercentage__c</fullName>
    <label>UG Percentage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>