force-app/main/default/objects/User__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <displayFormat>UI-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>UserId</label>
    <type>AutoNumber</type>
</CustomField>