force-app/main/default/objects/User__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <inlineHelpText>Kindly Fill out the Quadrobay Email.</inlineHelpText>
    <label>Username</label>
    <length>200</length>
    <type>Text</type>
</CustomField>