force-app/main/default/objects/User__c/fields/w_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>w_Contact_No__c</fullName>
    <label>Contact No</label>
    <type>Phone</type>
</CustomField>