force-app/main/default/objects/User__c/fields/W_Email__c.field-meta.xml
<CustomField>
    <fullName>W_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>