force-app/main/default/objects/User__c/fields/Work_From_Home__c.field-meta.xml
<CustomField>
    <fullName>Work_From_Home__c</fullName>
    <label>Work From Home</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>