force-app/main/default/objects/User__c/fields/Work_Permit__c.field-meta.xml
<CustomField>
    <fullName>Work_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Permit</label>
    <type>Checkbox</type>
</CustomField>