force-app/main/default/objects/User__c/fields/WorkDesignation__c.field-meta.xml
<CustomField>
    <fullName>WorkDesignation__c</fullName>
    <label>Work Designation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>