force-app/main/default/objects/User__c/fields/Working_Location__c.field-meta.xml
<CustomField>
    <fullName>Working_Location__c</fullName>
    <label>Working Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>