force-app/main/default/objects/User__c/fields/X10th__c.field-meta.xml
<CustomField>
    <fullName>X10th__c</fullName>
    <label>SSLC Percentage</label>
    <length>8</length>
    <type>Text</type>
</CustomField>