force-app/main/default/objects/User__c/fields/X10th_School_Name__c.field-meta.xml
<CustomField>
    <fullName>X10th_School_Name__c</fullName>
    <label>SSLC School Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>