force-app/main/default/objects/User__c/fields/X10th_Stream__c.field-meta.xml
<CustomField>
    <fullName>X10th_Stream__c</fullName>
    <label>SSLC Stream</label>
    <length>50</length>
    <type>Text</type>
</CustomField>