force-app/main/default/objects/User__c/fields/X12th_Percentage__c.field-meta.xml
<CustomField>
    <fullName>X12th_Percentage__c</fullName>
    <label>HSC Percentage</label>
    <length>8</length>
    <type>Text</type>
</CustomField>