force-app/main/default/objects/User__c/fields/X12th_School_Name__c.field-meta.xml
<CustomField>
    <fullName>X12th_School_Name__c</fullName>
    <label>HSC School Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>