force-app/main/default/objects/User__c/fields/X12th_Stream__c.field-meta.xml
<CustomField>
    <fullName>X12th_Stream__c</fullName>
    <label>HSC Stream</label>
    <length>50</length>
    <type>Text</type>
</CustomField>