force-app/main/default/objects/User__c/validationRules/Aadarcard_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadarcard_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(   AND(    

 LEN( Aadhar_Card_Number__c ) &gt;= 12,    

 NOT(BEGINS( Aadhar_Card_Number__c , &apos;0&apos;)) 

 ) )</errorConditionFormula>
    <errorMessage>Invalid Aadhar Number</errorMessage>
</ValidationRule>